# fourstack-quantum-logistics

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: forecast.py  sales.py  system.py
backend/app/fake_test_data/: forecast.json  sales.json
backend/app/repositories/: forecast_repo.py  sales_repo.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml/: access_token.csv  pyproject.toml  refresh_token.csv
ml/algorithms/: k_nearest_n.py  quapp_estimator.py  random_forest.py  vqr.py  xgboost.py
ml/evaluation/: benchmark.py  metrics.py
ml/evaluation/benchmark_data/food_model/: error_benchmark.csv
ml/evaluation/benchmark_data/food_model/vqr/: score_100s_xy.csv  score_20f.csv  (+3 more)
ml/preprocessing/: cleaner.py  feature_engineering.py  loader.py  prepare_food_data.py  split.py
ml/quapp_function/: test2.py
ml/training/: ablation_winsorize.py  eval_ksweep.py  make_demo_plots.py  ml_train.py  quapp_proof_run.py  test.py  train_protocol_p.py  train_vqr_ksweep.py  train_vqr_local.py  train_xgboost.py  xgb_control_q.py
ml/training/evaluation_result/: ablation_winsorize.csv  ablation_winsorize.json  demo_error_stats.json  ksweep_meta.json  ksweep_results.csv  protocol_p_metrics.json  vqr.csv  vqr_artifacts_k4.joblib  vqr_artifacts_k6.joblib  vqr_ksweep_results.csv  vqr_ksweep_results.json  vqr_local_predictions.csv  vqr_weights_k4.npy  vqr_weights_k6.npy  xgboost_predictions_full.csv  xgboost_predictions_leakage_free.csv
ml/utils/: api_refresher.py  api_util.py  path.py
(+31 files in other folders)
