[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "httpx>=0.28.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "qiskit>=2.5.0",
    "qiskit-algorithms>=0.4.0",
    "qiskit-machine-learning>=0.9.0",
    "quapp>=0.1.5",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "xgboost>=3.3.0",
]
